@@ -312,7 +312,6 @@ task(run, dependsOn: 'classes', type: JavaExec) {
     enableAssertions = true
     classpath = sourceSets.main.runtimeClasspath
     args = ["-Cpath.home=${rootDir}/sandbox/crate"]
-    jvmArgs = ["--enable-preview"]
 }
 
 task createCrateNodeScripts(type: CreateStartScripts) {
